--- a/src/app/player-notes/player-notes.component.css
+++ b/src/app/player-notes/player-notes.component.css
@@ -17,3 +17,10 @@ button {
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 768px) { 
+    button {
+        margin-left: 0;
+        width: 100%;
+    }    
+}
